# art-code-to-sheets

./: .gitignore  README.md  form_window.py  pdf_test.py  pyproject.toml
artcoder/: app.py  coder.py  config.py  converter.py  edit_dialog.py  g_sheet_processor.py  gui.py  loc_date_gui.py  pdf_processor.py  plan.py  plan_to_sheet.py  planex.py  scheduler.py  sheets_integration.py  sheets_manager.py
artcoder/temp_json/: agenda_data_ART FOCO_20250114.json  agenda_data_ART at UNC_20250116.json  agenda_data_ART at UNC_20250326.json  agenda_data_ART at UNC_20250327.json  agenda_data_ART at UNC_20260129.json  agenda_data_GREELEY_20250113.json  agenda_data_GREELEY_20250115.json  agenda_data_GREELEY_20250117.json  agenda_data_GREELEY_20250428.json  agenda_data_Greeley_20250319.json  plans.md
artcoder/tests/: test_config.py  test_google_sheet.py  test_pdf_extraction.py  test_pdf_processor.py  test_upload_json_to_sheets.py
artschedretriever/: agenda_data.json  cli.py  coder.py  config.py  gui.py  loc_date_gui.py  pinned_note_content.md  plan.py  plan_el_example.md  plan_extractor.py  plan_sample.txt  plan_to_sheet.py  planex.py  scheduler.py  sheets_integration.py
artschedretriever/temp_json/: agenda_data_GREELEY_20241209.json  agenda_data_GREELEY_20241225.json  coder.md
temp_json/: coding_test.json
xOld_app_files/: app_old.py  dialogs.py
